--- a/project html/index.html
+++ b/project html/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brooklyn — Learn Build Level Up</title>
+  <title>DevLearn — Learn Build Level Up</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -105,3 +105,4 @@
   </footer>
 </body>
 </html>
+
