--- a/project html/Home.html
+++ b/project html/Home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DevLearn — Learn Build Level Up</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="Homestyle.css" />
 </head>
 <body>
   <!-- NAV -->
@@ -105,5 +105,6 @@
   </footer>
 </body>
 </html>
+
 
 
