--- a/project html/Courses.html
+++ b/project html/Courses.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-  <title>Our Courses</title>
+  <title>DevLearn - Our Courses</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,10 +14,10 @@
       DevLearn
     </div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
+      <a href="Home.html">Home</a>
+      <a href="memberPage.html">About Us</a>
       <a href="courses.html" class="active">Courses</a>
-      <a href="contact.html">Contact</a>
+      <a href="form.html">Contact</a>
     </nav>
     <div class="buttons">
       <button class="btn" onclick="window.location.href='signup.html'">Sign up</button>
@@ -84,4 +84,5 @@
     <p>© 2025. All Rights Reserved.</p>
   </footer>
 </body>
+
 </html>
