--- a/project html/Courses.html
+++ b/project html/Courses.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <title>DevLearn - Our Courses</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="CoursesStyle.css">
 </head>
 <body>
   <!-- Navigation Bar -->
@@ -86,3 +86,4 @@
 </body>
 
 </html>
+
