--- a/project html/form.html
+++ b/project html/form.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Join Form</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="formStyle.css">
 </head>
 <body>
 
@@ -29,4 +29,5 @@
   </script>
 
 </body>
+
 </html>
