--- a/project html/memberPage.html
+++ b/project html/memberPage.html
@@ -19,10 +19,10 @@
 
         <!-- Navigation -->
         <nav class="nav">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-          <a href="courses.html">Courses</a>
-          <a href="contact.html">Contact</a>
+          <a href="Home.html">Home</a>
+          <a href="memberPage.html">About Us</a>
+          <a href="Courses.html">Courses</a>
+          <a href="form.html">Contact</a>
         </nav>
 
         <!-- Auth Buttons -->
@@ -128,5 +128,5 @@
 
     </div>
   </body>
-
 </html>
+
