--- a/project html/Home.html
+++ b/project html/Home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DevLearn — Learn Build Level Up</title>
+  <title>DevLearn</title>
   <link rel="stylesheet" href="Homestyle.css" />
 </head>
 <body>
@@ -17,7 +17,7 @@
     <div class="links">
       <a href="Home.html">Home</a>
       <a href="memberPage.html">About us</a>
-      <a href="#courses">Courses</a>
+      <a href="Courses.html">Courses</a>
       <a href="form.html">Contact us</a>
     </div>
 
@@ -105,6 +105,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
