--- a/project html/Courses.html
+++ b/project html/Courses.html
@@ -16,7 +16,7 @@
     <nav>
       <a href="Home.html">Home</a>
       <a href="memberPage.html">About Us</a>
-      <a href="courses.html" class="active">Courses</a>
+      <a href="Courses.html">Courses</a>
       <a href="form.html">Contact</a>
     </nav>
     <div class="buttons">
@@ -86,4 +86,5 @@
 </body>
 
 </html>
+
 
