--- a/project html/Courses.html
+++ b/project html/Courses.html
@@ -20,8 +20,8 @@
       <a href="form.html">Contact</a>
     </nav>
     <div class="buttons">
-      <button class="btn" onclick="window.location.href='signup.html'">Sign up</button>
-      <button class="btn-outline" onclick="window.location.href='login.html'">Login</button>
+      <button class="btn" onclick="window.location.href='form.html'">Sign up</button>
+      <button class="btn-outline" onclick="window.location.href='form.html'">Login</button>
     </div>
   </header>
 
@@ -86,5 +86,6 @@
 </body>
 
 </html>
+
 
 
