--- a/project html/Home.html
+++ b/project html/Home.html
@@ -27,6 +27,11 @@
     </div>
   </nav>
 
+	<div class="buttons">
+      <button class="btn" onclick="window.location.href='form.html'">Sign up</button>
+      <button class="btn-outline" onclick="window.location.href='form.html'">Login</button>
+    </div>
+
   <!-- HERO -->
   <header id="home" class="hero">
     <div class="hero-inner">
@@ -105,6 +110,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
