--- a/project html/Home.html
+++ b/project html/Home.html
@@ -21,16 +21,11 @@
       <a href="form.html">Contact us</a>
     </div>
 
-    <div class="actions">
-      <button class="btn dark">Sign up</button>
-      <button class="btn ghost">Log in</button>
-    </div>
-  </nav>
-
 	<div class="buttons">
       <button class="btn" onclick="window.location.href='form.html'">Sign up</button>
       <button class="btn-outline" onclick="window.location.href='form.html'">Login</button>
     </div>
+  </nav>
 
   <!-- HERO -->
   <header id="home" class="hero">
@@ -39,7 +34,6 @@
       <p class="lead">
         We're a team of developers and designers offering practical, project-based courses in web development and UI design.
       </p>
-      
 	  <a href="memberPage.html"class="btn hero-btn">Why Us?</a>
     </div>
   </header>
@@ -54,7 +48,7 @@
           We're a passionate team that believes learning should be simple, practical, and creative.
           Our goal is to share our experience through courses that make web development and design fun and easy to understand.
         </p>
-        <a href="indexrr.html" class="btn hero-btn">Contact Us</a>
+        <a href="form.html" class="btn hero-btn">Contact Us</a>
       </div>
     </div>
   </section>
@@ -110,6 +104,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
