--- a/project html/memberPage.html
+++ b/project html/memberPage.html
@@ -46,7 +46,7 @@
           </p>
         </div>
 
-        <a href="form.html" class="join-btn">Join Us</a>
+        <a href="form.html" class="btn-join">Join Us</a>
       </section><br><br>
 
       <!-- Team Members Section -->
@@ -123,6 +123,7 @@
     </div>
   </body>
 </html>
+
 
 
 
