Refactor memberPage.html structure and styles

--- a/project html/memberPage.html
+++ b/project html/memberPage.html
@@ -12,13 +12,14 @@
       <!-- Header -->
       <header class="header">
         <!-- Logo Section -->
-        <div class="logo-section">
-          <img class="logo-image" alt="DevLearn Logo" src="logo pic.jpg">
-          <div class="logo-text">DevLearn</div>
-        </div>
+         <nav class="nav">
+          <div class="brand">
+           <img src="logoo.jpg"class="logo-img">
+           <div class="name">DevLearn</div>
+         </div>
 
         <!-- Navigation -->
-        <nav class="nav">
+        <nav class="links">
           <a href="Home.html">Home</a>
           <a href="memberPage.html">About Us</a>
           <a href="Courses.html">Courses</a>
@@ -27,8 +28,8 @@
 
         <!-- Auth Buttons -->
          <div class="buttons">
-          <button class="btn" onclick="window.location.href='form.html'">Sign up</button>
-          <button class="btn-outline" onclick="window.location.href='form.html'">Login</button>
+          <button class="btn btn-signup btn-text" onclick="window.location.href='form.html'">Sign up</button>
+          <button class="btn-text btn-login btn" onclick="window.location.href='form.html'">Login</button>
          </div>
       </header>
 
@@ -36,7 +37,7 @@
       <section class="hero-section">
         <img class="hero-background" alt="Hero Background" src="hero section.jpg">
         
-        <div class="hero-content">
+        <div class="hero-content hero-inner">
           <h1 class="hero-title">Why join us?</h1>
           
           <p class="hero-description">
