--- a/project html/form.html
+++ b/project html/form.html
@@ -11,6 +11,7 @@
   <div class="form-container" id="formContainer">
     <form onsubmit="showMessage(event)">
       <input type="text" placeholder="Name" required>
+       <input type="text" placeholder="Name" required>
       <input type="email" placeholder="email" required>
       <input type="text" placeholder="Specialization" required>
       <textarea placeholder="Why do you want to join?" required></textarea>
@@ -33,5 +34,6 @@
 </body>
 
 </html>
+
 
 
