--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DevLearn</title>
-  <link rel="stylesheet" href="Homestyle.css" />
+  <link rel="stylesheet" href="Homestyle.css">
+
 </head>
 
 <body>
@@ -110,4 +111,5 @@
 </body>
 
 </html>
+
 
