--- a/Courses.html
+++ b/Courses.html
@@ -14,7 +14,7 @@
       DevLearn
     </div>
     <nav>
-      <a href="Home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="memberPage.html">About Us</a>
       <a href="Courses.html">Courses</a>
       <a href="form.html">Contact</a>
@@ -89,5 +89,6 @@
 </body>
 
 </html>
+
 
 
