Fix HTML formatting and structure in memberPage

--- a/memberPage.html
+++ b/memberPage.html
@@ -20,7 +20,7 @@
 
         <!-- Navigation -->
         <nav class="links">
-          <a href="Home.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="memberPage.html">About Us</a>
           <a href="Courses.html">Courses</a>
           <a href="form.html">Contact</a>
@@ -125,6 +125,7 @@
       <script src="main.js"></script>
   </body>
 </html>
+
 
 
 
