--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="links">
-      <a href="Home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="memberPage.html">About us</a>
       <a href="Courses.html">Courses</a>
       <a href="form.html">Contact us</a>
@@ -111,6 +111,7 @@
 </body>
 
 </html>
+
 
 
 
