--- a/memberPage.html
+++ b/memberPage.html
@@ -35,7 +35,7 @@
 
       <!-- Hero Section -->
       <section class="hero-section">
-        <img class="hero-background" alt="Hero Background" src="hero-section.jpg">
+        <img class="hero-background" alt="Hero Background" src="hero-section.png">
         
         <div class="hero-content hero-inner">
           <h1 class="hero-title">Why join us?</h1>
@@ -125,6 +125,7 @@
       <script src="main.js"></script>
   </body>
 </html>
+
 
 
 
